feat(antre): adding transaction for rollback and commit changes on DB

--- a/files/etc/antre-config/antre-config.development.yaml
+++ b/files/etc/antre-config/antre-config.development.yaml
@@ -7,3 +7,48 @@ server:
 
 toggle:
   enable_something: true
+
+route_roles:
+  "":
+    roles:
+      - id: 1
+        name: "Developer"
+      - id: 2
+        name: "Admin"
+      - id: 3
+        name: "Customer"
+      - id: 4
+        name: "PIC"
+      - id: 5
+        name: "Owner"
+      - id: 6
+        name: "User"
+
+  "PUT /v1/user/assign/{role}":
+    roles:
+      - id: 1
+        name: "Developer"
+      - id: 2
+        name: "Admin"
+      - id: 3
+        name: "Customer"
+      - id: 4
+        name: "PIC"
+      - id: 5
+        name: "Owner"
+      - id: 6
+        name: "User"
+
+  "POST /v1/reservations/{id}":
+    roles:
+      - id: 1
+        name: "Developer"
+      - id: 2
+        name: "Admin"
+      - id: 3
+        name: "Customer"
+      - id: 4
+        name: "PIC"
+      - id: 5
+        name: "Owner"
+      
