feat(antre) adding socket master

--- a/files/etc/antre-config/antre-config.development.yaml
+++ b/files/etc/antre-config/antre-config.development.yaml
@@ -8,6 +8,11 @@ server:
 toggle:
   enable_something: true
 
+environment:
+  is_local: true
+  is_debug: true
+  einhorn_fds: 3
+
 roles:
   developer: 
     id: 1
