--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,16 +7,19 @@ on:
     branches: [ master ]
 
 jobs:
-
+  
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        go-version: [1.16, 1.17, 1.18]
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: ${{ matrix.go-version }}
 
     - name: Build
       run: go build -v ./...
