--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   
   build:
-    runs-on: self-hosted
+    runs-on: [self-hosted, ubuntu-latest]
     strategy:
       matrix:
-        go-version: [1.16, 1.17, 1.18]
+        go-version: [1.16]
     steps:
     - uses: actions/checkout@v2
 
