--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: eifzed/antre-app
-        tags: latest
+        addLatest: true
         registry: docker.io
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
