--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,11 +27,15 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Build and push docker image
-      uses: mr-smithers-excellent/docker-build-push@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
       with:
-        image: eifzed/antre-app
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
         tags: eifzed/antre-app:latest
-        registry: docker.io
-        username: ${{secrets.DOCKER_USERNAME}}
-        password: ${{secrets.DOCKER_PASSWORD}}
