--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,8 +34,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: eifzed/antre-app:latest
+    - name: Build Docker Image
+      run: |
+        docker build --tag eifzed/antre_app:latest .
+    - name: Push Docker Image
+      run: |
+        docker push eifzed/antre_app:latest
